<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="repeat_passsword">Repeat Passsword</string>
    <string name="log_out">Log Out</string>
</resources>